<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/main_color">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#2a3757">

 />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/select_date"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60sp"
            android:textSize="22sp"/>

    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/ticket"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="150dp"
        ceterInParent="true"
        tools:ignore="ExtraText,VisualLintBounds,TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ticket_background">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_1633"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/image_the_creater_02"
                android:scaleType="fitCenter"
                app:layout_constraintDimensionRatio="H,16:9"
                app:shapeAppearanceOverlay="@style/round_mage_view" />

            <TextView
                android:id="@+id/movieName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:padding="10dp"
                android:text="@string/the_creater"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/theaterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:padding="8dp"
                android:text="xxxxxxxxxxxxxxxx"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ticketDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:padding="10dp"
                    android:text="@string/ticketDate"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="VisualLintOverlap" />

                <TextView
                    android:id="@+id/ticketHour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:padding="10dp"
                    android:text="Hour"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText,VisualLintBounds" />

                <TextView
                    android:id="@+id/ticketSeats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:padding="10dp"
                    android:text="@string/seats"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck,VisualLintBounds" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ticketDateFill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:padding="8dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="VisualLintOverlap" />

                <EditText
                    android:id="@+id/ticketHourFill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:padding="8dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText,VisualLintBounds"
                    />

                <EditText
                    android:id="@+id/ticketSeatsFill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:padding="8dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck,VisualLintBounds" />
            </LinearLayout>

            <TextView
                android:id="@+id/bookingCodename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:text="Booking Code"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/bookingCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="4568 5896 2547"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/PassKeyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:padding="10dp"
                android:text="Pass Key"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/PassKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="458 523"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck,VisualLintBounds" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>